fix : wrong href reference

--- a/src/app/components/components.html
+++ b/src/app/components/components.html
@@ -7,9 +7,9 @@
     <meta name="author" content="Devcrud">
     <title>Pigga | Components</title>
     <!-- font icons -->
-    <link rel="stylesheet" href="../../../assets/vendors/themify-icons/css/themify-icons.css">
+    <link rel="stylesheet" href="../../assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Pigga main styles -->
-   <link rel="stylesheet" href="../../../assets/css/pigga.css">
+   <link rel="stylesheet" href="../../assets/css/pigga.css">
 </head>
 <body>
 
