--- a/src/app/components/components.html
+++ b/src/app/components/components.html
@@ -18,7 +18,7 @@
       <div class="header-title">Components</div> 
       <nav aria-label="breadcrumb">
          <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="../pages/home/index.html">Home</a></li>
+            <li class="breadcrumb-item"><a href="../pages/example/default.todelete.html">Home</a></li>
             <li class="breadcrumb-item active" aria-current="page">Components</li>
          </ol>
       </nav>
@@ -878,8 +878,8 @@
     <!-- End of Page Footer -->
    
    <!-- core  -->
-   <script src="../../../assets/vendors/jquery/jquery-3.4.1.js"></script>
-   <script src="../../../assets/vendors/bootstrap/bootstrap.bundle.js"></script>
+   <script src="../../assets/vendors/jquery/jquery-3.4.1.js"></script>
+   <script src="../../assets/vendors/bootstrap/bootstrap.bundle.js"></script>
 
 </body>
 </html>
