--- a/src/app/pages/login/Login.html
+++ b/src/app/pages/login/Login.html
@@ -25,6 +25,9 @@
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="../../../assets/css/util.css">
 	<link rel="stylesheet" type="text/css" href="../../../assets/css/main.css">
+	<link rel="stylesheet" href="../../../assets/vendors/themify-icons/css/themify-icons.css">
+	<link rel="stylesheet" href="../../../assets/css/pigga.css">
+	<link rel="stylesheet" href="custom.css">
 <!--===============================================================================================-->
 </head>
 <body>
@@ -61,8 +64,16 @@
 							</button>
 						</div>
 					</div>
-
-					<div class="text-center p-t-115">
+					<div class="text-center">
+						<a class="txt2" href
+						="#">
+							Forgot Password?
+						</a>
+					</div>
+					<div class="text-center login100-form-btn">
+						<button class=" login100-form-btn btn circle"><i class="ti-facebook"></i></button>
+					</div>
+					<div class="text-center p-t-50">
 						<span class="txt1">
 							Don’t have an account?
 						</span>
@@ -80,21 +91,21 @@
 	<div id="dropDownSelect1"></div>
 	
 <!--===============================================================================================-->
-	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+	<script src="../../../assets/vendors/jquery/jquery-3.2.1.min.js"></script>
 <!--===============================================================================================-->
-	<script src="vendor/animsition/js/animsition.min.js"></script>
+	<script src="../../../assets/vendors/animsition/js/animsition.min.js"></script>
 <!--===============================================================================================-->
-	<script src="vendor/bootstrap/js/popper.js"></script>
-	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+	<script src="../../../assets/vendors/bootstrap/js/popper.js"></script>
+	<script src="../../../assets/vendors/bootstrap/js/bootstrap.min.js"></script>
 <!--===============================================================================================-->
-	<script src="vendor/select2/select2.min.js"></script>
+	<script src="../../../assets/vendors/select2/select2.min.js"></script>
 <!--===============================================================================================-->
-	<script src="vendor/daterangepicker/moment.min.js"></script>
-	<script src="vendor/daterangepicker/daterangepicker.js"></script>
+	<script src="../../../assets/vendors/daterangepicker/moment.min.js"></script>
+	<script src="../../../assets/vendors/daterangepicker/daterangepicker.js"></script>
 <!--===============================================================================================-->
-	<script src="vendor/countdowntime/countdowntime.js"></script>
+	<script src="../../../assets/vendors/countdowntime/countdowntime.js"></script>
 <!--===============================================================================================-->
-	<script src="js/main.js"></script>
+	<script src="../../../assets/js/main.js"></script>
 
 </body>
 </html>
