feat : home page static

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -9,20 +9,337 @@
 </head>
 <body>
 <!-- Header : start -->
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark rounded shadow mb-3">
+        <div class="container">
+            <a class="navbar-brand" href="#">MG Reader</a>
+            <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about">About Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#service">Our Service</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#login">login</a>
+                    </li>
+                    <li class="nav-item">
+                        <button class="btn btn-primary circle"><i class="ti-shopping-cart"></i></button>
+                    </li>
+
+                </ul>
+            </div>
+        </div>
+    </nav>
 <!-- Header : end -->
 
 <!-- Main : start -->
+    <section id="service" class="pattern-style-4 has-overlay">
+        <div class="container raise-2">
+            <h6 class="section-subtitle text-center">Featured Mangas</h6>
+            <h3 class="section-title mb-6 pb-3 text-center">Japanese Mangas</h3>
+            <div class="row">
+                <div class="col-md-6 mb-4">
+                    <a href="javascrip:void(0)" class="custom-list">
+                        <div class="img-holder">
+                            <img src="../../../assets/imgs/dish-1.jpg" alt="">
+                        </div>
+                        <div class="info">
+                            <div class="head clearfix">
+                                <h5 class="title float-left">Aperiam incidunt dicta</h5>
+                                <button class="float-right btn btn-sm btn-primary rounded">reserve</button>
+                            </div>
+                            <div class="body">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing Eos, earum dicta est veniam beatae libero!</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-6 mb-4">
+                    <a href="javascrip:void(0)" class="custom-list">
+                        <div class="img-holder">
+                            <img src="../../../assets/imgs/dish-2.jpg" alt="">
+                        </div>
+                        <div class="info">
+                            <div class="head clearfix">
+                                <h5 class="title float-left">Facere molestiae quaerat</h5>
+                                <button class="float-right btn btn-sm btn-primary rounded">reserve</button>                        </div>
+                            <div class="body">
+                                <p>Voluptatem voluptate ad fugit aliquam, laboriosam neque vero incidunt itaque.</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-6 mb-4">
+                    <a href="javascrip:void(0)" class="custom-list">
+                        <div class="img-holder">
+                            <img src="../../../assets/imgs/dish-3.jpg" alt="">
+                        </div>
+                        <div class="info">
+                            <div class="head clearfix">
+                                <h5 class="title float-left">Veniam Beatae Libero</h5>
+                                <button class="float-right btn btn-sm btn-primary rounded">reserve</button>                        </div>
+                            <div class="body">
+                                <p>Accusamus libero quo tempore suscipit molestias qui quam illo facere aspernatur esse! Doloribus?</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-6 mb-4">
+                    <a href="javascrip:void(0)" class="custom-list">
+                        <div class="img-holder">
+                            <img src="../../../assets/imgs/dish-4.jpg" alt="">
+                        </div>
+                        <div class="info">
+                            <div class="head clearfix">
+                                <h5 class="title float-left">Incidunt Eius</h5>
+                                <button class="float-right btn btn-sm btn-primary rounded">reserve</button>                        </div>
+                            <div class="body">
+                                <p>Doloremque maiores tempore, nostrum rerum nihil distinctio expedita voluptates eos deserunt.</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-6 mb-4">
+                    <a href="javascrip:void(0)" class="custom-list">
+                        <div class="img-holder">
+                            <img src="../../../assets/imgs/dish-5.jpg" alt="">
+                        </div>
+                        <div class="info">
+                            <div class="head clearfix">
+                                <h5 class="title float-left">Nihil dDstinctio</h5>
+                                <button class="float-right btn btn-sm btn-primary rounded">reserve</button>                        </div>
+                            <div class="body">
+                                <p>Doloremque maiores tempore, nostrum rerum expedita incidunt eius voluptates eos deserunt.</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-6 mb-4">
+                    <a href="javascrip:void(0)" class="custom-list">
+                        <div class="img-holder">
+                            <img src="../../../assets/imgs/dish-6.jpg" alt="">
+                        </div>
+                        <div class="info">
+                            <div class="head clearfix">
+                                <h5 class="title float-left">Dignissimos quidem</h5>
+                                <button class="float-right btn btn-sm btn-primary rounded">reserve</button>                        </div>
+                            <div class="body">
+                                <p>Doloremque maiores tempore, nostrum rerum nihil distinctio expedita voluptates eos deserunt.</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="container raise-2">
+            <h3 class="section-title mb-6 pb-3 text-center">Korean Manhuas</h3>
+            <div class="row">
+                <div class="col-md-6 mb-4">
+                    <a href="javascrip:void(0)" class="custom-list">
+                        <div class="img-holder">
+                            <img src="../../../assets/imgs/dish-1.jpg" alt="">
+                        </div>
+                        <div class="info">
+                            <div class="head clearfix">
+                                <h5 class="title float-left">Aperiam incidunt dicta</h5>
+                                <button class="float-right btn btn-sm btn-primary rounded">reserve</button>                        </div>
+                            <div class="body">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing Eos, earum dicta est veniam beatae libero!</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-6 mb-4">
+                    <a href="javascrip:void(0)" class="custom-list">
+                        <div class="img-holder">
+                            <img src="../../../assets/imgs/dish-2.jpg" alt="">
+                        </div>
+                        <div class="info">
+                            <div class="head clearfix">
+                                <h5 class="title float-left">Facere molestiae quaerat</h5>
+                                <button class="float-right btn btn-sm btn-primary rounded">reserve</button>                        </div>
+                            <div class="body">
+                                <p>Voluptatem voluptate ad fugit aliquam, laboriosam neque vero incidunt itaque.</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-6 mb-4">
+                    <a href="javascrip:void(0)" class="custom-list">
+                        <div class="img-holder">
+                            <img src="../../../assets/imgs/dish-3.jpg" alt="">
+                        </div>
+                        <div class="info">
+                            <div class="head clearfix">
+                                <h5 class="title float-left">Veniam Beatae Libero</h5>
+                                <button class="float-right btn btn-sm btn-primary rounded">reserve</button>                        </div>
+                            <div class="body">
+                                <p>Accusamus libero quo tempore suscipit molestias qui quam illo facere aspernatur esse! Doloribus?</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-6 mb-4">
+                    <a href="javascrip:void(0)" class="custom-list">
+                        <div class="img-holder">
+                            <img src="../../../assets/imgs/dish-4.jpg" alt="">
+                        </div>
+                        <div class="info">
+                            <div class="head clearfix">
+                                <h5 class="title float-left">Incidunt Eius</h5>
+                                <button class="float-right btn btn-sm btn-primary rounded">reserve</button>                        </div>
+                            <div class="body">
+                                <p>Doloremque maiores tempore, nostrum rerum nihil distinctio expedita voluptates eos deserunt.</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-6 mb-4">
+                    <a href="javascrip:void(0)" class="custom-list">
+                        <div class="img-holder">
+                            <img src="../../../assets/imgs/dish-5.jpg" alt="">
+                        </div>
+                        <div class="info">
+                            <div class="head clearfix">
+                                <h5 class="title float-left">Nihil dDstinctio</h5>
+                                <button class="float-right btn btn-sm btn-primary rounded">reserve</button>                        </div>
+                            <div class="body">
+                                <p>Doloremque maiores tempore, nostrum rerum expedita incidunt eius voluptates eos deserunt.</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-6 mb-4">
+                    <a href="javascrip:void(0)" class="custom-list">
+                        <div class="img-holder">
+                            <img src="../../../assets/imgs/dish-6.jpg" alt="">
+                        </div>
+                        <div class="info">
+                            <div class="head clearfix">
+                                <h5 class="title float-left">Dignissimos quidem</h5>
+                                <button class="float-right btn btn-sm btn-primary rounded">reserve</button>                        </div>
+                            <div class="body">
+                                <p>Doloremque maiores tempore, nostrum rerum nihil distinctio expedita voluptates eos deserunt.</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="container raise-2">
+            <h3 class="section-title mb-6 pb-3 text-center">Chinese Manhwas</h3>
+            <div class="row">
+                <div class="col-md-6 mb-4">
+                    <a href="javascrip:void(0)" class="custom-list">
+                        <div class="img-holder">
+                            <img src="../../../assets/imgs/dish-1.jpg" alt="">
+                        </div>
+                        <div class="info">
+                            <div class="head clearfix">
+                                <h5 class="title float-left">Aperiam incidunt dicta</h5>
+                                <button class="float-right btn btn-sm btn-primary rounded">reserve</button>                        </div>
+                            <div class="body">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing Eos, earum dicta est veniam beatae libero!</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-6 mb-4">
+                    <a href="javascrip:void(0)" class="custom-list">
+                        <div class="img-holder">
+                            <img src="../../../assets/imgs/dish-2.jpg" alt="">
+                        </div>
+                        <div class="info">
+                            <div class="head clearfix">
+                                <h5 class="title float-left">Facere molestiae quaerat</h5>
+                                <button class="float-right btn btn-sm btn-primary rounded">reserve</button>                        </div>
+                            <div class="body">
+                                <p>Voluptatem voluptate ad fugit aliquam, laboriosam neque vero incidunt itaque.</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-6 mb-4">
+                    <a href="javascrip:void(0)" class="custom-list">
+                        <div class="img-holder">
+                            <img src="../../../assets/imgs/dish-3.jpg" alt="">
+                        </div>
+                        <div class="info">
+                            <div class="head clearfix">
+                                <h5 class="title float-left">Veniam Beatae Libero</h5>
+                                <button class="float-right btn btn-sm btn-primary rounded">reserve</button>                        </div>
+                            <div class="body">
+                                <p>Accusamus libero quo tempore suscipit molestias qui quam illo facere aspernatur esse! Doloribus?</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-6 mb-4">
+                    <a href="javascrip:void(0)" class="custom-list">
+                        <div class="img-holder">
+                            <img src="../../../assets/imgs/dish-4.jpg" alt="">
+                        </div>
+                        <div class="info">
+                            <div class="head clearfix">
+                                <h5 class="title float-left">Incidunt Eius</h5>
+                                <button class="float-right btn btn-sm btn-primary rounded">reserve</button>                        </div>
+                            <div class="body">
+                                <p>Doloremque maiores tempore, nostrum rerum nihil distinctio expedita voluptates eos deserunt.</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-6 mb-4">
+                    <a href="javascrip:void(0)" class="custom-list">
+                        <div class="img-holder">
+                            <img src="../../../assets/imgs/dish-5.jpg" alt="">
+                        </div>
+                        <div class="info">
+                            <div class="head clearfix">
+                                <h5 class="title float-left">Nihil dDstinctio</h5>
+                                <button class="float-right btn btn-sm btn-primary rounded">reserve</button>                        </div>
+                            <div class="body">
+                                <p>Doloremque maiores tempore, nostrum rerum expedita incidunt eius voluptates eos deserunt.</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-6 mb-4">
+                    <a href="javascrip:void(0)" class="custom-list">
+                        <div class="img-holder">
+                            <img src="../../../assets/imgs/dish-6.jpg" alt="">
+                        </div>
+                        <div class="info">
+                            <div class="head clearfix">
+                                <h5 class="title float-left">Dignissimos quidem</h5>
+                                <button class="float-right btn btn-sm btn-primary rounded">reserve</button>                        </div>
+                            <div class="body">
+                                <p>Doloremque maiores tempore, nostrum rerum nihil distinctio expedita voluptates eos deserunt.</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
 <!-- Main : end -->
 
 <!-- Footer : start -->
+    <div class="bg-dark text-light text-center border-top wow fadeIn">
+        <p class="mb-0 py-3 text-muted small">&copy; Copyright <script>document.write(new Date().getFullYear())</script> Made with <i class="ti-heart text-danger"></i> By <a href="http://devcrud.com">DevCRUD</a></p>
+    </div>
 <!-- Footer : end -->
 
 <!-- JS : start -->
-<script src="../../../assets/vendors/jquery/jquery-3.4.1.js"></script>
-<script src="../../../assets/vendors/bootstrap/bootstrap.bundle.js"></script>
-<script src="../../../assets/vendors/bootstrap/bootstrap.affix.js"></script>
-<script src="../../../assets/js/pigga.js"></script>
-<script src="custom.js"></script>
+    <script src="../../../assets/vendors/jquery/jquery-3.4.1.js"></script>
+    <script src="../../../assets/vendors/bootstrap/bootstrap.bundle.js"></script>
+    <script src="../../../assets/vendors/bootstrap/bootstrap.affix.js"></script>
+    <script src="../../../assets/js/pigga.js"></script>
+    <script src="custom.js"></script>
 <!-- JS : end -->
 
 </body>
