--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -18,13 +18,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">About Us</a>
+                        <a class="nav-link" href="#about" id="About-us">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#service">Our Service</a>
+                        <a class="nav-link" href="#service" id="Our-service">Our Service</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#login">login</a>
+                        <a class="nav-link" href="#login" id="login">login</a>
                     </li>
                     <li class="nav-item">
                         <button class="btn btn-primary circle"><i class="ti-shopping-cart"></i></button>
