test: log a person in with selenium

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -13,6 +13,7 @@
 
 <!-- Main : start -->
 <div id="user-role"></div>
+<div id="login-status"></div>
 <!-- Main : end -->
 
 <!-- Footer : start -->
