test: log a person out with selenium

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -14,6 +14,7 @@
 <!-- Main : start -->
 <div id="user-role"></div>
 <div id="login-status"></div>
+<button id="logout-button"></button>
 <!-- Main : end -->
 
 <!-- Footer : start -->
