--- a/src/app/pages/reservation/reservation.html
+++ b/src/app/pages/reservation/reservation.html
@@ -43,7 +43,9 @@
     <div class="row">
         <form class="col-md-6 mx-auto" action="">
             <div class="form-group">
-                <label for="firstname">Firstname</label>
+                <label for="firstname" lang="en">Firstname</label>
+                <label for="firstname" lang="fr">Prénom</label>
+                <label for="firstname" lang="de">Virname</label>
                 <input type="text" class="form-control" id="firstname" placeholder="Enter your firstname">
             </div>
             <div class="form-group">
@@ -70,15 +72,14 @@
 <!-- Main : end -->
 
 <!-- Footer : start -->
-<div class="footer-sticky bg-dark text-light text-center border-top wow fadeIn">
+<div class="bg-dark text-light text-center border-top wow fadeIn">
     <p class="mb-0 py-3 text-muted small">&copy; Copyright <script>document.write(new Date().getFullYear())</script> Made with <i class="ti-heart text-danger"></i> By <a href="http://devcrud.com">DevCRUD</a></p>
+    <select id="language-switcher" onchange="changeLanguage(this.value)">
+        <option value="en">English</option>
+        <option value="fr">Français</option>
+        <option value="de">Deutsch</option>
+    </select>
 </div>
-<!-- Header : end -->
-
-<!-- Main : start -->
-<!-- Main : end -->
-
-<!-- Footer : start -->
 <!-- Footer : end -->
 
 <!-- JS : start -->
