--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -59,7 +59,7 @@
                     </a>
                 </div>
                 <div class="col-md-6 mb-4">
-                    <a href="javascrip:void(0)" class="custom-list">
+                    <a href="javascript:void(0)" class="custom-list">
                         <div class="img-holder">
                             <img src="../../../assets/imgs/dish-2.jpg" alt="">
                         </div>
@@ -74,7 +74,7 @@
                     </a>
                 </div>
                 <div class="col-md-6 mb-4">
-                    <a href="javascrip:void(0)" class="custom-list">
+                    <a href="javascript:void(0)" class="custom-list">
                         <div class="img-holder">
                             <img src="../../../assets/imgs/dish-3.jpg" alt="">
                         </div>
@@ -89,7 +89,7 @@
                     </a>
                 </div>
                 <div class="col-md-6 mb-4">
-                    <a href="javascrip:void(0)" class="custom-list">
+                    <a href="javascript:void(0)" class="custom-list">
                         <div class="img-holder">
                             <img src="../../../assets/imgs/dish-4.jpg" alt="">
                         </div>
@@ -104,7 +104,7 @@
                     </a>
                 </div>
                 <div class="col-md-6 mb-4">
-                    <a href="javascrip:void(0)" class="custom-list">
+                    <a href="javascript:void(0)" class="custom-list">
                         <div class="img-holder">
                             <img src="../../../assets/imgs/dish-5.jpg" alt="">
                         </div>
@@ -119,7 +119,7 @@
                     </a>
                 </div>
                 <div class="col-md-6 mb-4">
-                    <a href="javascrip:void(0)" class="custom-list">
+                    <a href="javascript:void(0)" class="custom-list">
                         <div class="img-holder">
                             <img src="../../../assets/imgs/dish-6.jpg" alt="">
                         </div>
@@ -139,7 +139,7 @@
             <h3 class="section-title mb-6 pb-3 text-center">Korean Manhuas</h3>
             <div class="row">
                 <div class="col-md-6 mb-4">
-                    <a href="javascrip:void(0)" class="custom-list">
+                    <a href="javascript:void(0)" class="custom-list">
                         <div class="img-holder">
                             <img src="../../../assets/imgs/dish-1.jpg" alt="">
                         </div>
@@ -154,7 +154,7 @@
                     </a>
                 </div>
                 <div class="col-md-6 mb-4">
-                    <a href="javascrip:void(0)" class="custom-list">
+                    <a href="javascript:void(0)" class="custom-list">
                         <div class="img-holder">
                             <img src="../../../assets/imgs/dish-2.jpg" alt="">
                         </div>
@@ -169,7 +169,7 @@
                     </a>
                 </div>
                 <div class="col-md-6 mb-4">
-                    <a href="javascrip:void(0)" class="custom-list">
+                    <a href="javascript:void(0)" class="custom-list">
                         <div class="img-holder">
                             <img src="../../../assets/imgs/dish-3.jpg" alt="">
                         </div>
@@ -184,7 +184,7 @@
                     </a>
                 </div>
                 <div class="col-md-6 mb-4">
-                    <a href="javascrip:void(0)" class="custom-list">
+                    <a href="javascript:void(0)" class="custom-list">
                         <div class="img-holder">
                             <img src="../../../assets/imgs/dish-4.jpg" alt="">
                         </div>
@@ -199,7 +199,7 @@
                     </a>
                 </div>
                 <div class="col-md-6 mb-4">
-                    <a href="javascrip:void(0)" class="custom-list">
+                    <a href="javascript:void(0)" class="custom-list">
                         <div class="img-holder">
                             <img src="../../../assets/imgs/dish-5.jpg" alt="">
                         </div>
@@ -214,7 +214,7 @@
                     </a>
                 </div>
                 <div class="col-md-6 mb-4">
-                    <a href="javascrip:void(0)" class="custom-list">
+                    <a href="javascript:void(0)" class="custom-list">
                         <div class="img-holder">
                             <img src="../../../assets/imgs/dish-6.jpg" alt="">
                         </div>
@@ -234,7 +234,7 @@
             <h3 class="section-title mb-6 pb-3 text-center">Chinese Manhwas</h3>
             <div class="row">
                 <div class="col-md-6 mb-4">
-                    <a href="javascrip:void(0)" class="custom-list">
+                    <a href="javascript:void(0)" class="custom-list">
                         <div class="img-holder">
                             <img src="../../../assets/imgs/dish-1.jpg" alt="">
                         </div>
@@ -249,7 +249,7 @@
                     </a>
                 </div>
                 <div class="col-md-6 mb-4">
-                    <a href="javascrip:void(0)" class="custom-list">
+                    <a href="javascript:void(0)" class="custom-list">
                         <div class="img-holder">
                             <img src="../../../assets/imgs/dish-2.jpg" alt="">
                         </div>
@@ -264,7 +264,7 @@
                     </a>
                 </div>
                 <div class="col-md-6 mb-4">
-                    <a href="javascrip:void(0)" class="custom-list">
+                    <a href="javascript:void(0)" class="custom-list">
                         <div class="img-holder">
                             <img src="../../../assets/imgs/dish-3.jpg" alt="">
                         </div>
@@ -279,7 +279,7 @@
                     </a>
                 </div>
                 <div class="col-md-6 mb-4">
-                    <a href="javascrip:void(0)" class="custom-list">
+                    <a href="javascript:void(0)" class="custom-list">
                         <div class="img-holder">
                             <img src="../../../assets/imgs/dish-4.jpg" alt="">
                         </div>
@@ -294,7 +294,7 @@
                     </a>
                 </div>
                 <div class="col-md-6 mb-4">
-                    <a href="javascrip:void(0)" class="custom-list">
+                    <a href="javascript:void(0)" class="custom-list">
                         <div class="img-holder">
                             <img src="../../../assets/imgs/dish-5.jpg" alt="">
                         </div>
@@ -309,7 +309,7 @@
                     </a>
                 </div>
                 <div class="col-md-6 mb-4">
-                    <a href="javascrip:void(0)" class="custom-list">
+                    <a href="javascript:void(0)" class="custom-list">
                         <div class="img-holder">
                             <img src="../../../assets/imgs/dish-6.jpg" alt="">
                         </div>
