--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -5,7 +5,8 @@
     <title>Home</title>
     <link rel="stylesheet" href="../../../assets/vendors/themify-icons/css/themify-icons.css">
     <link rel="stylesheet" href="../../../assets/css/pigga.css">
-    <link rel="stylesheet" href="custom.css">
+    <link rel="stylesheet" href="./custom.css">
+    <script type="module" src="../../services/localization.service.js"></script>
 </head>
 <body>
 <!-- Header : start -->
@@ -18,13 +19,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#about" id="About-us">About Us</a>
+                        <a class="nav-link" href="#about" id="About-us" data-i18n="about us"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#service" id="Our-service">Our Service</a>
+                        <a class="nav-link" href="#service" id="Our-service" data-i18n="our services"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#login" id="login">login</a>
+                        <a class="nav-link" href="#Login" id="Login" data-i18n="login"></a>
                     </li>
                     <li class="nav-item">
                         <button class="btn btn-primary circle"><i class="ti-shopping-cart"></i></button>
@@ -39,8 +40,8 @@
 <!-- Main : start -->
     <section id="service" class="pattern-style-4 has-overlay">
         <div class="container raise-2">
-            <h6 class="section-subtitle text-center">Featured Mangas</h6>
-            <h3 class="section-title mb-6 pb-3 text-center">Japanese Mangas</h3>
+            <h6 class="section-subtitle text-center" id="Featured_Mangas" data-i18n="featured mangas"></h6>
+            <h3 class="section-title mb-6 pb-3 text-center" id="Japanese_Mangas" data-i18n="japanese Mangas"></h3>
             <div class="row">
                 <div class="col-md-6 mb-4">
                     <a href="javascrip:void(0)" class="custom-list">
@@ -50,7 +51,7 @@
                         <div class="info">
                             <div class="head clearfix">
                                 <h5 class="title float-left">Aperiam incidunt dicta</h5>
-                                <button class="float-right btn btn-sm btn-primary rounded">reserve</button>
+                                <button class="float-right btn btn-sm btn-primary rounded" data-i18n="reserve"></button>
                             </div>
                             <div class="body">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing Eos, earum dicta est veniam beatae libero!</p>
@@ -66,7 +67,8 @@
                         <div class="info">
                             <div class="head clearfix">
                                 <h5 class="title float-left">Facere molestiae quaerat</h5>
-                                <button class="float-right btn btn-sm btn-primary rounded">reserve</button>                        </div>
+                                <button class="float-right btn btn-sm btn-primary rounded" data-i18n="reserve"></button>                        
+                            </div>
                             <div class="body">
                                 <p>Voluptatem voluptate ad fugit aliquam, laboriosam neque vero incidunt itaque.</p>
                             </div>
@@ -81,7 +83,7 @@
                         <div class="info">
                             <div class="head clearfix">
                                 <h5 class="title float-left">Veniam Beatae Libero</h5>
-                                <button class="float-right btn btn-sm btn-primary rounded">reserve</button>                        </div>
+                                <button class="float-right btn btn-sm btn-primary rounded" data-i18n="reserve"></button>                        </div>
                             <div class="body">
                                 <p>Accusamus libero quo tempore suscipit molestias qui quam illo facere aspernatur esse! Doloribus?</p>
                             </div>
@@ -96,7 +98,7 @@
                         <div class="info">
                             <div class="head clearfix">
                                 <h5 class="title float-left">Incidunt Eius</h5>
-                                <button class="float-right btn btn-sm btn-primary rounded">reserve</button>                        </div>
+                                <button class="float-right btn btn-sm btn-primary rounded" data-i18n="reserve"></button>                        </div>
                             <div class="body">
                                 <p>Doloremque maiores tempore, nostrum rerum nihil distinctio expedita voluptates eos deserunt.</p>
                             </div>
@@ -111,7 +113,7 @@
                         <div class="info">
                             <div class="head clearfix">
                                 <h5 class="title float-left">Nihil dDstinctio</h5>
-                                <button class="float-right btn btn-sm btn-primary rounded">reserve</button>                        </div>
+                                <button class="float-right btn btn-sm btn-primary rounded" data-i18n="reserve"></button>                        </div>
                             <div class="body">
                                 <p>Doloremque maiores tempore, nostrum rerum expedita incidunt eius voluptates eos deserunt.</p>
                             </div>
@@ -126,7 +128,7 @@
                         <div class="info">
                             <div class="head clearfix">
                                 <h5 class="title float-left">Dignissimos quidem</h5>
-                                <button class="float-right btn btn-sm btn-primary rounded">reserve</button>                        </div>
+                                <button class="float-right btn btn-sm btn-primary rounded" data-i18n="reserve"></button>                        </div>
                             <div class="body">
                                 <p>Doloremque maiores tempore, nostrum rerum nihil distinctio expedita voluptates eos deserunt.</p>
                             </div>
@@ -136,7 +138,7 @@
             </div>
         </div>
         <div class="container raise-2">
-            <h3 class="section-title mb-6 pb-3 text-center">Korean Manhuas</h3>
+            <h3 class="section-title mb-6 pb-3 text-center" data-i18n="korean manhwas"></h3>
             <div class="row">
                 <div class="col-md-6 mb-4">
                     <a href="javascript:void(0)" class="custom-list">
@@ -146,7 +148,7 @@
                         <div class="info">
                             <div class="head clearfix">
                                 <h5 class="title float-left">Aperiam incidunt dicta</h5>
-                                <button class="float-right btn btn-sm btn-primary rounded">reserve</button>                        </div>
+                                <button class="float-right btn btn-sm btn-primary rounded" data-i18n="reserve"></button>                        </div>
                             <div class="body">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing Eos, earum dicta est veniam beatae libero!</p>
                             </div>
@@ -161,7 +163,7 @@
                         <div class="info">
                             <div class="head clearfix">
                                 <h5 class="title float-left">Facere molestiae quaerat</h5>
-                                <button class="float-right btn btn-sm btn-primary rounded">reserve</button>                        </div>
+                                <button class="float-right btn btn-sm btn-primary rounded" data-i18n="reserve"></button>                        </div>
                             <div class="body">
                                 <p>Voluptatem voluptate ad fugit aliquam, laboriosam neque vero incidunt itaque.</p>
                             </div>
@@ -176,7 +178,7 @@
                         <div class="info">
                             <div class="head clearfix">
                                 <h5 class="title float-left">Veniam Beatae Libero</h5>
-                                <button class="float-right btn btn-sm btn-primary rounded">reserve</button>                        </div>
+                                <button class="float-right btn btn-sm btn-primary rounded" data-i18n="reserve"></button>                        </div>
                             <div class="body">
                                 <p>Accusamus libero quo tempore suscipit molestias qui quam illo facere aspernatur esse! Doloribus?</p>
                             </div>
@@ -191,7 +193,7 @@
                         <div class="info">
                             <div class="head clearfix">
                                 <h5 class="title float-left">Incidunt Eius</h5>
-                                <button class="float-right btn btn-sm btn-primary rounded">reserve</button>                        </div>
+                                <button class="float-right btn btn-sm btn-primary rounded" data-i18n="reserve"></button>                        </div>
                             <div class="body">
                                 <p>Doloremque maiores tempore, nostrum rerum nihil distinctio expedita voluptates eos deserunt.</p>
                             </div>
@@ -206,7 +208,7 @@
                         <div class="info">
                             <div class="head clearfix">
                                 <h5 class="title float-left">Nihil dDstinctio</h5>
-                                <button class="float-right btn btn-sm btn-primary rounded">reserve</button>                        </div>
+                                <button class="float-right btn btn-sm btn-primary rounded" data-i18n="reserve"></button>                        </div>
                             <div class="body">
                                 <p>Doloremque maiores tempore, nostrum rerum expedita incidunt eius voluptates eos deserunt.</p>
                             </div>
@@ -221,7 +223,7 @@
                         <div class="info">
                             <div class="head clearfix">
                                 <h5 class="title float-left">Dignissimos quidem</h5>
-                                <button class="float-right btn btn-sm btn-primary rounded">reserve</button>                        </div>
+                                <button class="float-right btn btn-sm btn-primary rounded" data-i18n="reserve"></button>                        </div>
                             <div class="body">
                                 <p>Doloremque maiores tempore, nostrum rerum nihil distinctio expedita voluptates eos deserunt.</p>
                             </div>
@@ -231,7 +233,7 @@
             </div>
         </div>
         <div class="container raise-2">
-            <h3 class="section-title mb-6 pb-3 text-center">Chinese Manhwas</h3>
+            <h3 class="section-title mb-6 pb-3 text-center" id="chinese manhuas"></h3>
             <div class="row">
                 <div class="col-md-6 mb-4">
                     <a href="javascript:void(0)" class="custom-list">
@@ -241,7 +243,7 @@
                         <div class="info">
                             <div class="head clearfix">
                                 <h5 class="title float-left">Aperiam incidunt dicta</h5>
-                                <button class="float-right btn btn-sm btn-primary rounded">reserve</button>                        </div>
+                                <button class="float-right btn btn-sm btn-primary rounded" data-i18n="reserve"></button>                        </div>
                             <div class="body">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing Eos, earum dicta est veniam beatae libero!</p>
                             </div>
@@ -256,7 +258,7 @@
                         <div class="info">
                             <div class="head clearfix">
                                 <h5 class="title float-left">Facere molestiae quaerat</h5>
-                                <button class="float-right btn btn-sm btn-primary rounded">reserve</button>                        </div>
+                                <button class="float-right btn btn-sm btn-primary rounded" data-i18n="reserve"></button>                        </div>
                             <div class="body">
                                 <p>Voluptatem voluptate ad fugit aliquam, laboriosam neque vero incidunt itaque.</p>
                             </div>
@@ -271,7 +273,7 @@
                         <div class="info">
                             <div class="head clearfix">
                                 <h5 class="title float-left">Veniam Beatae Libero</h5>
-                                <button class="float-right btn btn-sm btn-primary rounded">reserve</button>                        </div>
+                                <button class="float-right btn btn-sm btn-primary rounded" data-i18n="reserve"></button>                        </div>
                             <div class="body">
                                 <p>Accusamus libero quo tempore suscipit molestias qui quam illo facere aspernatur esse! Doloribus?</p>
                             </div>
@@ -286,7 +288,7 @@
                         <div class="info">
                             <div class="head clearfix">
                                 <h5 class="title float-left">Incidunt Eius</h5>
-                                <button class="float-right btn btn-sm btn-primary rounded">reserve</button>                        </div>
+                                <button class="float-right btn btn-sm btn-primary rounded" data-i18n="reserve"></button>                        </div>
                             <div class="body">
                                 <p>Doloremque maiores tempore, nostrum rerum nihil distinctio expedita voluptates eos deserunt.</p>
                             </div>
@@ -301,7 +303,7 @@
                         <div class="info">
                             <div class="head clearfix">
                                 <h5 class="title float-left">Nihil dDstinctio</h5>
-                                <button class="float-right btn btn-sm btn-primary rounded">reserve</button>                        </div>
+                                <button class="float-right btn btn-sm btn-primary rounded" data-i18n="reserve"></button>                        </div>
                             <div class="body">
                                 <p>Doloremque maiores tempore, nostrum rerum expedita incidunt eius voluptates eos deserunt.</p>
                             </div>
@@ -316,7 +318,7 @@
                         <div class="info">
                             <div class="head clearfix">
                                 <h5 class="title float-left">Dignissimos quidem</h5>
-                                <button class="float-right btn btn-sm btn-primary rounded">reserve</button>                        </div>
+                                <button class="float-right btn btn-sm btn-primary rounded" data-i18n="reserve"></button>                        </div>
                             <div class="body">
                                 <p>Doloremque maiores tempore, nostrum rerum nihil distinctio expedita voluptates eos deserunt.</p>
                             </div>
@@ -330,8 +332,7 @@
 
 <!-- Footer : start -->
 <div class="bg-dark text-light text-center border-top wow fadeIn">
-    <p class="mb-0 py-3 text-muted small">&copy; Copyright <script>document.write(new Date().getFullYear())</script> Made with <i class="ti-heart text-danger"></i> By <a href="http://devcrud.com">DevCRUD</a></p>
-    <select id="language-switcher" onchange="changeLanguage(this.value)">
+    <select id="language-switcher">
         <option value="en">English</option>
         <option value="fr">Français</option>
         <option value="de">Deutsch</option>
@@ -344,7 +345,8 @@
     <script src="../../../assets/vendors/bootstrap/bootstrap.bundle.js"></script>
     <script src="../../../assets/vendors/bootstrap/bootstrap.affix.js"></script>
     <script src="../../../assets/js/pigga.js"></script>
-    <script src="custom.js"></script>
+    <script type="module" src="custom.js"></script>
+    <script type="module" src="home.controller.js"></script>
 <!-- JS : end -->
 
 </body>
