--- a/src/app/pages/login/Login.html
+++ b/src/app/pages/login/Login.html
@@ -71,7 +71,7 @@
 						</a>
 					</div>
 					<div class="text-center login100-form-btn">
-						<button class=" login100-form-btn btn circle"><i class="ti-facebook"></i></button>
+						<button id="login-btn" class=" login100-form-btn btn circle"><i class="ti-facebook"></i></button>
 					</div>
 					<div class="text-center p-t-50">
 						<span class="txt1">
@@ -106,6 +106,8 @@
 	<script src="../../../assets/vendors/countdowntime/countdowntime.js"></script>
 <!--===============================================================================================-->
 	<script src="../../../assets/js/main.js"></script>
+<!--===============================================================================================-->
+	<script type="module" src="custom.js"></script>
 
 </body>
 </html>
